tests/error/type_match/typename_array_slice.bz
function test1(T: [: const typename]);

function test()
{
	test1([: float64]);
}
